--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,10 +2,11 @@
 <html>
   <head></head>
   <body>
-    <h1 class="text-center title-1"><%= title %></h1>  
-      <form action="/new" method="POST"></form>
+    <h1><%= title %></h1>  
+      <form action="/new" method="POST">
         Nome: <input type="text" name="nome"/><br/>
         Idade: <input type="number" name="idade"/><br/>
         <input type="submit" value="Salvar"/>
+      </form>
   </body>
 </html>
